welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:10: error: 'while' expected but 'if' found.
  if (nbBiscuit>=3){
  ^Poucet:15: error: '(' expected but '}' found.
}
^